Add user table
