# src/main/java/com/library/managementservice/api/dto/MemberResponse.java
@@ -3,5 +3,7 @@ package com.library.managementservice.api.dto;
 public record MemberResponse(
     Long id,
     String name,
-    String email
+    String email,
+    long activeLoans,
+    String password
 ) {}
