# src/main/java/com/library/managementservice/controller/LoanController.java
@@ -1,11 +1,15 @@
 package com.library.managementservice.controller;
 
 import com.library.managementservice.api.dto.BorrowLoanResponse;
+import com.library.managementservice.api.dto.LoanDetailResponse;
 import com.library.managementservice.api.dto.ReturnLoanResponse;
 import com.library.managementservice.service.LoanService;
 ;
-import org.springframework.http.HttpStatus;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+
 
 @RestController
 @RequestMapping("/api/loans")
@@ -19,17 +23,24 @@ public class LoanController {
 
     @PostMapping("/borrow")
     public BorrowLoanResponse borrow(
-        @RequestParam Long bookId,
-        @RequestParam Long memberId
+            @RequestParam Long bookId,
+            Authentication authentication
     ) {
-        return service.borrowBook(bookId, memberId);
+        return service.borrowBook(bookId, authentication);
     }
 
     @PostMapping("/return")
     public ReturnLoanResponse returnBook(
-        @RequestParam Long bookId,
-        @RequestParam Long memberId
+            @RequestParam Long bookId,
+            Authentication authentication
     ) {
-       return service.returnBook(bookId, memberId);
+        return service.returnBook(bookId, authentication);
     }
+
+    @GetMapping("/me")
+    public List<LoanDetailResponse> getMyLoans(Authentication authentication) {
+        return service.getLoansForCurrentMember(authentication);
+    }
+
+
 }
